--- a/src/rete.css
+++ b/src/rete.css
@@ -1,10 +1,10 @@
 .rete {
   position: relative;
-  width: 80vw;
-  height: 90vh;
+  width: 100%;
+  height: 80vh;
   font-size: 1rem;
   background: white;
   margin: 1em;
-  border-radius: 1em;
+  border-radius: 0.5em;
   text-align: left;
 }
